# decision-coach-openenv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv  dataset2.csv
env/: environment.py  grader.py  reward.py  state.py
evaluation/: run_eval.py
server/: app.py
tasks/: easy.py  hard.py  medium.py  task_list.py
utils/: action_parser.py  llm_grader.py  prompt_builder.py
