[project]
name = "decision-coach-env"
version = "0.1.0"
description = "RL-style decision making environment"
authors = [
  { name="Shakti" }
]
dependencies = []

[build-system]
requires = ["setuptools", "wheel","pip"]
build-backend = "setuptools.build_meta"
[project.scripts]
server = "server.app:main"